--- a/html/productList.html
+++ b/html/productList.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <script src="../assets/bootstrap-5.3.0-alpha1-dist/js/bootstrap.min.js"></script>
     <script src="../assets/jquery/jquery-3.6.3.js"></script>
+    <script type="module" src="../js/brand.js"></script>
     <script type="module" src="../js/productList.js"></script>
     <script type="text/javascript" src="../js/cart.js"></script>
     <title>Xe Cũ</title>
@@ -42,7 +43,7 @@
         </form>
 
         <!-- Brands  -->
-
+        <div class="brand-container"></div>
         <!-- Products List  -->
         <div class="row mt-5">
             <aside class="col-12 col-md-3">
