--- a/html/footer.html
+++ b/html/footer.html
@@ -6,15 +6,15 @@
                 <div class="row p-4">
                     <div class="col-3">
                         <h6>KHÁM PHÁ V&PT</h6>
-                        <a href="#">Thông tin về V&PT</a><br>
-                        <a href="#">Liên hệ</a><br>
-                        <a href="#">Sitemap</a><br>
+                        <a href="/html/about.html">Thông tin về V&PT</a><br>
+                        <a href="/html/contact.html">Liên hệ</a><br>
+                        <a href="/html/sitemap.html">Sitemap</a><br>
                     </div>
                     <div class="col-3">
                         <h6>TIN TỨC BÁN Ô TÔ</h6>
-                        <a href="#">Ô tô mới</a><br>
-                        <a href="#">Ô tô cũ</a><br>
-                        <a href="#">Hotline: 0938383838</a><br>
+                        <a href="/html/newsCarDetail.html?brand=toyota">Ô tô mới</a><br>
+                        <a href="/html/productList.html">Ô tô cũ</a><br>
+                        <a href="">Hotline: 0938383838</a><br>
                     </div>
                     <div class="col-6">
                         <div class="about-content flex text-center">
