--- a/html/productList.html
+++ b/html/productList.html
@@ -50,10 +50,7 @@
                 <div class="filter-box">
                     <p class="dark"><a href="#">XE CŨ</a></p>
                     <p class="dropdown-brand">
-                        <a href="#">XE MỚI</a>
-                        <!-- <div id="brand" class="row dropdown-brand-menu">
-                            <div class="brand-container"></div>
-                        </div> -->
+                        <a href="/html/newsCarDetail.html?brand=toyota">XE MỚI</a>
                     </p>
                 </div>
                 <div class="filter-box">
