--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade show active" id="nav-suv" role="tabpanel" aria-labelledby="nav-suv-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=1">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
@@ -100,7 +100,7 @@
             </div>
             <div class="tab-pane fade" id="nav-sedan" role="tabpanel" aria-labelledby="nav-sedan-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=2">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
@@ -110,7 +110,7 @@
             </div>
             <div class="tab-pane fade" id="nav-mpv" role="tabpanel" aria-labelledby="nav-mpv-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=3">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
@@ -120,7 +120,7 @@
             </div>
             <div class="tab-pane fade" id="nav-cuv" role="tabpanel" aria-labelledby="nav-cuv-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=4">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
@@ -130,7 +130,7 @@
             </div>
             <div class="tab-pane fade" id="nav-pickup" role="tabpanel" aria-labelledby="nav-pickup-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=5">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
@@ -140,7 +140,7 @@
             </div>
             <div class="tab-pane fade" id="nav-hatchback" role="tabpanel" aria-labelledby="nav-hatchback-tab">
                 <div class="spotlight-container"></div>
-                <a href="./typeDetail.html?type=6">
+                <a href="/html/newsCarDetail.html?brand=honda">
                     <button type="button" class="btn btn-secondary"
                         style="--bs-btn-border-radius: 0; --bs-btn-padding-y: .5rem; margin-top: 1rem;
                         --bs-btn-padding-x: 1.25rem; --bs-btn-font-size: 1rem; margin-top:18rem">
